2002-07-30  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-parser.c (parser_step_headers): Finish the fix from
	yesterday, the last statement of the while-loop needs to
	re-calculate `len' for parser_fill().

2002-07-30  Charles Kerr <charles@rebelbase.com>

	* gmime-message.c (message_remove_header): Fix April 3 2002 bug
	that kept message-remove-header from removing headers.

2002-07-29  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-message.c (message_get_headers): Write the toplevel MIME
	Part's headers to the string as well, this fixes bug #88632 in
	bugzilla.gnome.org.

2002-07-29  Jeffrey Stedfast  <fejj@ximian.com>

	The following changes are meant to address bug #88100 on
	bugzilla.gnome.org - I'm as of yet unsure whether or not GMime
	should override the Message-Id write function or if Pan should do
	it. I'm sort of leaning towards Pan doing it simply because the
	current behavior is RFC compliant and the bug is really a "we need
	a workaround for a buggy NNTP server". However... It might just be
	simpler to have GMime do it.

	* gmime-header.c (g_mime_header_new): Init a new hash table that
	stores info on how to write a particular header.
	(g_mime_header_destroy): Free the hash table.
	(g_mime_header_set_write_func): Set the writer function for a
	header.
	(g_mime_header_write_to_stream): Use the specified header write
	function for each ehader. If one wasn't specified, use the
	default.

2002-07-29  Charles Kerr  <charles@rebelbase.com>

	* remove strlib.[ch]
	* use g_strcasecmp instead of strcasecmp
	* use g_strncasecmp instead of strncasecmp
	* use g_stpcpy instead of stpcpy
	* added "#include <string.h>" where needed

2002-07-29  Charles Kerr  <charles@rebelbase.com>

	* gmime-filter-strip: fix trivial compiler warning.
	* gmime-message-part.c: same.
	* gmime-multipart-signed.c: same.
	* gmime-object.c: same.
	* gmime-param.c: same.
	* gmime-session.c: same.
	* test-iconv.c: same.
	* test-mbox.c: same.
	* test-parser.c: same.
	* test-partial.c: same.
